download button added

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     padding: 0;
     margin: 0;
 }
@@ -17,6 +18,9 @@ body{
     position: fixed;
     top: 0;
     left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100vw;
     height: 100vh;
     background: url('../assets/imgs/d4b792e1-21a4-4e39-86bb-36925f1a60b6.png');
@@ -25,8 +29,45 @@ body{
     
 }
 
+.spacer {
+      height: 200vh;
+    }
+
+.cinema{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: black;
+    width: 80%;
+}
+
+video{
+    pointer-events: none;
+}
+
+.sand{
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.sand video{
+    mix-blend-mode:lighten;
+    position: absolute;
+    z-index: 2;
+}
+
+.sand img{
+    mix-blend-mode: screen;
+    opacity: 50%;
+}
+
+
 .shade{
-    padding: 2em;
+    padding: 1em;
+    padding-top: 0em;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -43,4 +84,365 @@ body{
 a{
     font-size: 1.4em;
     color: color-mix(in srgb, #544528 50%, blue 50%);
+}
+
+.shade > nav{
+    background: rgba(255, 255, 255, 0);
+    background-color:#544528 ;
+    width: 100%;
+    height: 4em;
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+    border-bottom: 3px solid #544528;
+    margin: 1em;
+    margin-top: 0;
+    margin-bottom: 2em;
+    padding: 1em;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 3;
+}
+
+nav a{
+    color: #E60802;
+    -webkit-text-stroke-color: #E60802;
+    -webkit-text-stroke-width: 0.5px;
+    cursor: pointer;
+    transition: 200ms;
+    text-decoration: none;
+}
+
+nav a:hover{
+    transform: scale(1.1);
+}
+
+nav img{
+    border-radius: 20px;
+    border: #E60802 2px solid;
+}
+
+nav button{
+    background: #544528;
+    border: none;
+    cursor: pointer;
+}
+
+nav button img{
+    height: 50px;
+    border: none;
+    transition: 200ms;
+}
+
+nav button img:hover{
+    transform: scale(1.1);
+}
+
+.apresentacao{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1em;
+    border-bottom: 3px solid #544528;
+    padding-bottom: 4em;
+}
+
+.fraseImpacto{
+    font-size: 2.5em;
+    text-align: center;
+    font-weight: 800;
+    -webkit-text-stroke-color: #544528;
+    -webkit-text-stroke-width: 0.5px;
+}
+
+.personagens{
+    margin-top: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    padding-bottom: 3em;
+    border-bottom: 3px solid #544528;
+    
+}
+
+.titulo{
+    font-size: 3em;
+    text-align: center;
+    font-weight: 800;
+    -webkit-text-stroke-color: #544528;
+    -webkit-text-stroke-width: 0.5px;
+}
+
+.tabua{
+    margin-top: 1em;
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 1em;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    padding: 0.5em;
+    background: url('../assets/imgs/tabua.png');
+    background-repeat: no-repeat repeat-y;
+    object-fit: cover;
+}
+
+.tabua .poster{
+    object-fit: contain;
+     width: 400px;   /* largura fixa */
+    height: 550px; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: url('../assets/imgs/wantedFrame.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: relative;
+    cursor: pointer;
+    transition: 1s;
+}
+
+
+.tabua .poster:hover{
+    transform: scale(1.1);
+    z-index: 2;
+    box-shadow: -10px -10px 10px rgba(0, 0, 0, 0.473);
+}
+
+
+.tabua .poster img{
+    width: 60%;
+    top: 20%;
+    object-fit: contain;
+    position: absolute;
+    z-index: 1;
+}
+
+.tabua .poster p{
+    position: absolute;
+    top: 75%;
+    font-size: 1.8em;
+}
+
+.tabua .poster.evil{
+    object-fit: contain;
+     width: 400px;   /* largura fixa */
+    height: 550px; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: url('../assets/imgs/wantedFrameLost.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: relative;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.tabua .poster.evil:hover{
+    transform: scale(1.1);
+    z-index: 2;
+    filter: drop-shadow( -10px -10px 10px rgba(0, 0, 0, 0.473));
+}
+
+.tabua .poster.evil img{
+    width: 60%;
+    top: 20%;
+    object-fit: contain;
+    position: absolute;
+    z-index: 1;
+}
+
+.tabua .poster.evil p{
+    position: absolute;
+    top: 75%;
+    font-size: 1.8em;
+}
+
+
+.historia{
+    margin-top: 1em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 95%;
+    padding-bottom: 3em;
+    border-bottom: 3px solid #544528;
+}
+
+.historia .pagina{
+    height: 100vh;
+    width: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    border-radius: 10px;
+    padding: 1em;
+}
+
+.historia .pagina::-webkit-scrollbar{
+    background-color: #DDD7CC;
+    margin-right: 1em;
+}
+
+.historia .pagina::-webkit-scrollbar-track-piece{
+    background-color: #DDD7CC;
+}
+
+.historia .pagina::-webkit-scrollbar-thumb{
+    background-color: #544528;
+    border-radius: 5px;
+}
+
+
+.historia .pagina pre{
+    font-size: 1em;
+    white-space: pre-wrap;
+    text-align: left;
+    font-family: "pixel";
+    animation: fadeIn 2s ease forwards;
+    opacity: 0;
+    
+}
+
+
+.historia .pagina_poster{
+    height: 20vh;
+    width: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    border-radius: 10px;
+    padding: 1em;
+}
+
+.historia .pagina_poster::-webkit-scrollbar{
+    background-color: #DDD7CC;
+    margin-right: 1em;
+}
+
+.historia .pagina_poster::-webkit-scrollbar-track-piece{
+    background-color: #DDD7CC;
+}
+
+.historia .pagina_poster::-webkit-scrollbar-thumb{
+    background-color: #544528;
+    border-radius: 5px;
+}
+
+
+.historia .pagina_poster pre{
+    font-size: 1em;
+    white-space: pre-wrap;
+    text-align: left;
+    font-family: "pixel";
+    animation: fadeIn 2s ease forwards;
+    opacity: 0;
+    
+}
+
+.download{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 3em;
+    border-bottom: 3px solid #544528;
+}
+
+.download button{
+    background-color: #544528;
+    height: 2em;
+    width: 40%;
+    font-size: 1.8em;
+    border-radius: 10px;
+    color: white;
+    font-family: "pixel";
+    cursor: pointer;
+    transition: 800ms;
+}
+
+.download button:hover{
+    transform: scale(1.1);
+}
+
+
+.politicas{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 3em;
+    border-bottom: 3px solid #544528;
+    width: 100%;
+}
+
+.politicas h2{
+    font-size: 1.3em;
+}
+
+.politicas a{
+    font-size: 1.3em;
+}
+
+.quadro{
+    height: 400px;
+    width: 400px;
+    padding: 1em;
+    padding-bottom: 0;
+    border: 4px solid #544528;
+}
+
+.quadro img{
+    width: 100%;
+}
+
+.menu_open{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 9955;
+    display: none;
+    background: url('../assets/imgs/d4b792e1-21a4-4e39-86bb-36925f1a60b6.png');
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.floating-button {
+  position: fixed;
+  bottom: 20px;  /* distância do rodapé */
+  right: 20px;   /* distância da lateral */
+  z-index: 9999;
+  display: none; /* padrão: escondido */
+}
+
+
+.floating-button button {
+  background: #544528;
+  color: white;
+  font-size: 2em;
+  border: none;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.floating-button button:hover {
+  transform: scale(1.1);
+}
+
+
+@keyframes fadeIn {
+    to { opacity: 1; }
 }
