--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,9 @@ body{
     justify-content: center;
     align-items: center;
     background: black;
+    opacity: 0;
     width: 80%;
+    animation: comeUp 0.8s ease-in-out forwards;
 }
 
 video{
@@ -107,15 +109,19 @@ a{
     top: 0;
     left: 0;
     z-index: 3;
+    animation: comeDown 0.8s ease-in-out forwards;
 }
 
 nav a{
     color: #E60802;
+    opacity: 0%;
+    margin-inline: 0.5em;
     -webkit-text-stroke-color: #E60802;
     -webkit-text-stroke-width: 0.5px;
     cursor: pointer;
     transition: 200ms;
     text-decoration: none;
+    animation: comeUp 0.8s 1.5s ease-in-out forwards;
 }
 
 nav a:hover{
@@ -124,7 +130,9 @@ nav a:hover{
 
 nav img{
     border-radius: 20px;
+    opacity: 0%;
     border: #E60802 2px solid;
+    animation: comeUp 0.8s 1.5s ease-in-out forwards;
 }
 
 nav button{
@@ -157,8 +165,10 @@ nav button img:hover{
     font-size: 2.5em;
     text-align: center;
     font-weight: 800;
+    opacity: 0;
     -webkit-text-stroke-color: #544528;
     -webkit-text-stroke-width: 0.5px;
+    animation: comeUp 0.8s 1.2s ease-in-out forwards;
 }
 
 .personagens{
@@ -177,8 +187,10 @@ nav button img:hover{
     font-size: 3em;
     text-align: center;
     font-weight: 800;
+    opacity: 0;
     -webkit-text-stroke-color: #544528;
     -webkit-text-stroke-width: 0.5px;
+    animation: comeUp 0.8s 1s ease-in-out forwards;
 }
 
 .tabua{
@@ -400,8 +412,10 @@ nav button img:hover{
     height: 400px;
     width: 400px;
     padding: 1em;
+    opacity: 0%;
     padding-bottom: 0;
     border: 4px solid #544528;
+    animation: comeUp 0.8s forwards ease-in-out;
 }
 
 .quadro img{
@@ -417,6 +431,8 @@ nav button img:hover{
     z-index: 9955;
     display: none;
     background: url('../assets/imgs/d4b792e1-21a4-4e39-86bb-36925f1a60b6.png');
+    background-blend-mode: color;
+    background-color: rgba(0, 0, 0, 0.322);
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -430,6 +446,43 @@ nav button img:hover{
   display: none; /* padrão: escondido */
 }
 
+.floating-button.scrollspy{
+    position: fixed;
+    top: 15%;
+    right: 50%;
+    transform: translatex(50%);
+    z-index: 9999;
+    display: block;
+}
+
+.floating-button.scrollspy button {
+  background: #5c5c5c66;
+  backdrop-filter: blur(10px);
+  color: white;
+  font-size: 1em;
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.4);
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.floating-button button:hover {
+  transform: scale(1.1);
+}
+
+#ola{
+    opacity: 0%;
+    animation: comeUp 0.8s 1.2s forwards ease-in-out;
+}
+
+.historia#historiaAnimation{
+    opacity: 0%;
+    animation: comeUp 0.8s 1.8s forwards ease-in-out;
+    border-bottom: none;
+}
 
 .floating-button button {
   background: #544528;
@@ -448,7 +501,64 @@ nav button img:hover{
   transform: scale(1.1);
 }
 
+.invisible{
+    opacity: 0%;
+    transform: translateY(10px);
+    transition: all 0.8s ease-in-out;
+}
+
+.visible{
+    opacity: 100%;
+    transform: translateY(0px);
+    transition: all 0.8s ease-in-out;
+}
+
+.titulo.noAnimation{
+    animation: none;
+}
+
+
+.invisible.delay{
+    opacity: 0;
+    transition: all 0.8s ease-in-out;
+    transition-delay: 0;
+}
+
+.invisible.delay:nth-child(1){
+    transition: all 0.8s ease-in-out;
+    transition-delay: 0.8s;
+}
+.invisible.delay:nth-child(2){
+    transition: all 0.8s ease-in-out;
+    transition-delay: 1.5s;
+}
+
 
 @keyframes fadeIn {
     to { opacity: 1; }
+}
+
+
+@keyframes comeUp {
+    0%{
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    100%{
+        opacity: 100%;
+        transform: translateY(0px);
+    }
+    
+}
+
+@keyframes comeDown {
+    0%{
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    100%{
+        opacity: 100%;
+        transform: translateY(0px);
+    }
+    
 }
